# food-fight

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Cargo.toml  LICENSE  MACBOOK.md  PLAN.md  README.md  SPRITE_PROMPTS.md  STEAMDECK.md  clippy.toml  deck-run.sh  steam-launch.sh  steam_input_manifest.vdf  steamdeck.sh
assets/sprites/effects/: effects.json
assets/sprites/food/: food_items.json
assets/sprites/launchers/: launchers.json
assets/sprites/map/: cafeteria_bg.json
assets/sprites/melee/: melee_weapons.json
assets/sprites/npcs/: lunch_lady.json  principal.json  teacher.json
assets/sprites/players/: player_blue.json  player_green.json  player_red.json  player_yellow.json
assets/sprites/ui/: ui_elements.json
sprites/: generate_cafeteria.py  generate_launchers.py  generate_melee.py  run.sh
src/: audio.rs  controller.rs  input.rs  main.rs  score.rs  sprites.rs  states.rs  steam.rs
src/combat/: collision.rs  mod.rs
src/food/: components.rs  launcher.rs  melee.rs  mod.rs  spawning.rs  throwing.rs  trajectory.rs
src/lobby/: mod.rs  ui.rs
src/map/: collision.rs  loading.rs  mod.rs
src/npc/: chase.rs  components.rs  detection.rs  mod.rs  patrol.rs
src/player/: animation.rs  components.rs  input.rs  mod.rs  movement.rs
src/ui/: hud.rs  mod.rs  scoreboard.rs
