[package]
name = "food_fight"
version = "0.1.0"
edition = "2021"
description = "Chaotic 2D multiplayer food fight for 1–4 players, built with Rust and Bevy"
authors = ["Bryan Rosander"]
license = "LicenseRef-PolyForm-Noncommercial-1.0.0"

[dependencies]
bevy = "0.15"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
